# advent-of-code

./: .gitignore  _template.hs  start-day.sh
2019/day03/: solution.hs
2019/day04/: solution.hs
2019/day05/: solution.hs
2019/day06/: solution.hs
2019/day07/: solution.hs
2019/day09/: solution.hs
2019/day1/: solution.hs
2019/day10/: solution.hs
2019/day11/: solution.hs
2019/day12/: solution.hs
2019/day2/: solution.hs
2019/day5/: solution.hs
2019/day7/: solution.hs
2019/day8/: solution.hs
2019/day9/: solution.hs
2020/day01/: solution.hs
2020/day02/: solution.hs
2020/day03/: solution.hs
2020/day04/: solution.hs
2020/day05/: solution.hs
2020/day06/: solution.hs
2020/day07/: input.txt  solution.hs
2020/day08/: solution.hs
2020/day09/: solution.hs
2020/day10/: solution.hs
2020/day11/: solution.hs
2020/day12/: solution.hs
2020/day13/: solution.hs
2022/: .envrc  AoC2022.cabal  Cargo.toml  LICENSE  flake.nix
2022/haskell/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Utils.hs
2022/haskell-test/: Main.hs
2022/rust/: day01.rs  day02.rs  day03.rs  utils.rs
